examples/test/testpolicy11187.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11187
  namespace: namespace396
spec:
  podSelector:
    matchLabels:
      key33: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value9
          key37: value45
          key21: value17
      podSelector:
        matchLabels:
          key21: value13
          key30: value26
          key17: value39
